<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.ntut.user.myhw3.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/sex"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radGrpSex"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <RadioButton
            android:id="@+id/radBtnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_Range1_Male" />

        <RadioButton
            android:id="@+id/radBtnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_Range2_Female" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/age"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spnAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/age_Male" />

    <TextView
        android:id="@+id/txtHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/hobby"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chk01_Music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <CheckBox
                android:id="@+id/chk02_Sing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing" />

            <CheckBox
                android:id="@+id/chk03_Dance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dance" />

            <CheckBox
                android:id="@+id/chk04_Travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

            <CheckBox
                android:id="@+id/chk05_Reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reading" />

            <CheckBox
                android:id="@+id/chk06_Writing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writing" />

            <CheckBox
                android:id="@+id/chk07_Climbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/climbing" />

            <CheckBox
                android:id="@+id/chk08_Swim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swim" />

            <CheckBox
                android:id="@+id/chk09_Eating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eating" />

            <CheckBox
                android:id="@+id/chk10_Drawing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawing" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtHobbyResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobby_result"
        android:textSize="18sp" />

</LinearLayout>
